--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
