--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
